--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -23,6 +23,11 @@
                         {% endif %}
                     <p class="mb-1">Без команды</p>
                     <p>Рейтинг {% karma profile %}</p>
+                    <p class="mb-0">
+                        <img src="{% static "img/ico/vk_1.png" %}" height="41" width="41" title="vk">
+                        <img src="{% static "img/ico/discord_1.png" %}" height="41" width="41" title="vk">
+                        <img src="{% static "img/ico/tg_1.png" %}" height="41" width="41" title="vk">
+                    </p>
                 </div>
             </div>
             <div class="col-sm-8">
