--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -1,8 +1,7 @@
 {% load static %}
 
-
 {% if user.is_authenticated %}
-    {% include 'core/include/form_comment.html' with nickname=user.username element=object %}
+    {% include 'core/include/form_comment.html' %}
 {% else %}
     Войдите, чтобы оставить комментарий
 {% endif %}
@@ -13,13 +12,14 @@
             <img src="{{ comment.author.user_profile.avatar.url }}" class="rounded-circle float-left" width="50"
                  height="50">
 
+            <a href="{{ comment.post.get_absolute_url }}#{{ comment.id }}">комментрий номер()</a>
 
             <a href="{{ comment.author.user_profile.get_absolute_url }}" class="post_header">
                 {{ comment.author }}
             </a>
         </div>
         <div class="card-body">
-            <p class="card-text">{{ comment.body|linebreaks }}</p>
+            <p class="card-text">{{ comment.body|safe }}</p>
         </div>
         <div class="card-footer text-muted d-inline-flex justify-content-between">
             <span> Отправлено {{ comment.created|date:"SHORT_DATE_FORMAT" }} в {{ comment.created|time:"H:i" }}, Автор: <a
