--- a/haxball_site/static/core/include/comments.css
+++ b/haxball_site/static/core/include/comments.css
@@ -1,6 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700);
 
-
+p {
+    font-size: 18px;
+}
 
 .card-no-border .card {
     border: 0px;
