--- a/haxball_site/static/core/profile/profile.css
+++ b/haxball_site/static/core/profile/profile.css
@@ -57,9 +57,14 @@ h6 {
     line-height: 25px
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1200px) {
     p {
         font-size: 14px
+    }
+}
+@media only screen and (min-width: 700px) {
+    p {
+        font-size: 16px
     }
 }
 
